[package]
name = "rust-threading"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
parking_lot = "0.12.3"
serde = { version = "1.0.204", features = ["alloc", "derive"] }
serde_json = { version = "1.0.120", features = ["alloc"] }
thiserror = "1.0.63"
